@@ -26,6 +26,8 @@ Noteworthy changes in version 2.2.42 (unreleased)
 
   * gpgsm: Also announce AES256-CBC in signatures.  [rGaa397fdcdb21]
 
+  * dirmngr: New option --ignore-crl-extensions.  [T6545]
+
   Release-info: https://dev.gnupg.org/T6307
 
 
